--- a/hover/assets/css/main.css
+++ b/hover/assets/css/main.css
@@ -1,7 +1,34 @@
-.box{
-  height: 100px;
-  width: 200px;
-  background-color: blue;
-  border: 10px solid blue;
-  color: yellow;
+.number{
+  color: red;
+}
+
+.number:hover{
+  background-color: red;
+  colour:#fff;
+}
+
+.footnote{
+  position:fixed;
+  bottom:0px;
+  left:10px;
+  font-family: arial;
+  display: none;
+}
+
+.footnote.showme {
+  display: block;
+}
+
+.metahaven.orange {
+  color:orange;
+  font-size: 12px;
+  transition: 2s;
+}
+
+.thumbnail {
+  width: 150px;
+}
+
+.thumbnail.enlarge {
+  width: 600px;;
 }
